Fix T52852: Assert in looptri calculation after recent changes.

Wrong condition in asserts...